# Inventory-Management-Application

./: .replit  FlaskApp.py  README.md  data.db  data.db-journal  database.py  pyproject.toml
functions/: sqlquery.py
templates/: main.html  sqldatabase.html  warehouse.html
