[tool.poetry]
name = "repl_python3_Inventory-Management-Application-1"
version = "0.1.0"
description = ""
authors = ["owageh <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
